# esp32-led_strip

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32-led_strip/: .gitignore  CMakeLists.txt  Makefile
esp32-led_strip/main/: CMakeLists.txt  main.c
esp32-led_strip/main/src/: led_pattern.c  led_strip.c  main.c
main/inc/: led_pattern.h  led_strip.h
main/src/: CMakeLists.txt
